--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
@@ -7,8 +8,19 @@
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
 </head>
+
 <body>
-    Hello world
+    <div class="wrapper">
+        <div class="jeu">
+            <div class="des des-1" data-id="0"></div>
+            <div class="des des-2" data-id="1"></div>
+            <div class="des des-3" data-id="2"></div>
+            <div class="des des-4" data-id="3"></div>
+            <div class="des des-5" data-id="4"></div>
+        </div>
+        <div class="reroll">Reroll</div>
+    </div>
     <script src="src/js/script.js"></script>
 </body>
+
 </html>
